<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DMS_Assign2</string>
    <string name="hello_world">Welcome!!</string>
    <string name="action_settings">Settings</string>
    <string name="pre_connect">Please input server address</string>
    <string name="chat_room">Start Chat Room</string>
    <string name="sms_send">Send SMS</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_activity">BluetoothActivity</string>
    <string name="title_activity_sms">SmsActivity</string>
    <string name="server">Server</string>
    <string name="client">Client</string>
    <string name="send">Send</string>
    
    <string name="waiting">Waiting</string>
	<string name="msg_searching_devices">Searching devices...</string>
    <string name="msg_waiting_connection">Waiting for connection...</string>
	<string name="msg_connecting_bluetooth">Connecting to the selected device...</string>
	
	<string name="clean_historic">Clean historic</string>
	<string name="no_connection">No connection</string>
	<string name="lost_connection">Lost connection</string>
	<string name="connected_sucessfully">Connected successfully</string>
	<string name="failed_to_send_message">Failed to send message</string>
	<string name="connection_failed">Connection failed</string>
	<string name="devices_found">Devices found</string>
    <string name="enter_message">Enter message</string>
    <string name="no_support_bluetooth">Your device does not support bluetooth</string>
    <string name="activate_bluetooth_to_continue">You must activate bluetooth to continue</string>
	<string name="device_must_visible">To start the server, your device must be visible</string>
    <string name="no_device_found">No device found</string>

</resources>
